<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_app_bar_menu_search"
        android:title="@string/app_bar_menu_search"
        android:icon="@android:drawable/ic_search_category_default"
        android:iconTint="@color/black"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bottom_app_bar_menu_share"
        android:title="@string/app_bar_menu_share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bottom_app_bar_menu_bookmark"
        android:title="@string/app_bar_menu_bookmark"
        android:icon="@drawable/ic_bookmark"
        app:showAsAction="ifRoom"/>


</menu>